<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/upMainBackground"
    android:orientation="vertical">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/upHomeMain" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/upWrite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_type"
                android:textColor="@color/upView"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutLocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/icon_check_sel" />

                <TextView
                    android:id="@+id/tvLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/upgrade_local"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/icon_check_un_sel" />

                <TextView
                    android:id="@+id/tvDis"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/upgrade_distance"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/upWrite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/communication_agreement"
                android:textColor="@color/upView"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spAgr"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/communication_agreement" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/upView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/communication_type"
                android:textColor="@color/upView"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/communication_type" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/upView" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:text="@string/upgrade_next"
        android:textColor="@color/upWrite"
        android:textSize="24sp" />


</LinearLayout>